Updated descriptive alt image text

--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -87,7 +87,7 @@
                 <p>
                     Research for my Design Section of the website, including but not limited to the documentation of my IxD process, 
                     style process documentation, and style guide mapping
-                    <a href="design_week_5.html" class="view-more">View More...</a>
+                    <a href="../Designs/design_week_5.html" class="view-more">View More...</a>
                 </p>
             </div>
 
@@ -95,7 +95,7 @@
             <h2 class="p-name">Ethics of UX Practice (Design Section)</h2>           
                 <p>
                     Adding more to the Design Section of the website such as the style guide or wireframes
-                    <a href="design_week_6.html" class="view-more">View More...</a>
+                    <a href="../Designs/design_week_6.html" class="view-more">View More...</a>
                 </p>
             </div>
 
