--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -64,7 +64,7 @@
                                     This definitley tailors the experience to allow for a personalized shopping experience for the users.
                                     <!--Screenshot image-->
                                     <figure> 
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_pro1.png" alt="Screenshot of pro">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_pro1.png" alt="Screenshot of an exntensive menu category in the nav bar. Easy to navigate for users">
                                     </figure>
                                 </p>
 
@@ -80,11 +80,11 @@
                                     This results in a disorientated user since they face a frustrating layout.
                                     Some of the images cuts out the text above slightly, also adding to a more challenging to read user interface.
                                     <figure> 
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con1.png" alt="Screenshot of bad UI">
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con2.png" alt="Screenshot of bad UI">
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con3.png" alt="Screenshot of bad UI">
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con4.png" alt="Screenshot of bad UI">
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con5.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con1.png" alt="Screenshot of bad UI. Large advert image of easter specials under each other leaving white space to the sides">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con2.png" alt="Screenshot of bad UI. Advert images of easter specials with two next to each other and one below in the middle. Not very harmonious layout">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con3.png" alt="Screenshot of bad UI. Block-cards showcasing products and each product image is a different size. As a result the 'shop now' button is on different levels on each block-card. Not easy for user to navigate">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con4.png" alt="Screenshot of bad UI. Another case whereby the block-cards showcase products and each product images is different sizes. As a result the 'shop now' button is on different levels on each block-card. Not easy for user to navigate">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_dischem_con5.png" alt="Screenshot of bad UI. Images overlapping, and text cut-off by those images">
                                     </figure>
                                 </p>
 
@@ -99,7 +99,7 @@
                                     The Home Page/Landing page has a structured layout that allows users to see the event and a little excerpt.
                                     <!--Screenshot image-->
                                     <figure> 
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_pro1.png" alt="Screenshot of pro">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_pro1.png" alt="Screenshot of coherent homepage. Carousel of events well laid out and spaced. ">
                                     </figure>
 
                                 </p>
@@ -114,16 +114,16 @@
                                     While this is combined with images sometime sitting on other components as well.
                                     <!--Screenshot images-->
                                     <figure> 
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con1.png" alt="Screenshot of bad UI">
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con2.png" alt="Screenshot of bad UI">
-                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con3.png" alt="Screenshot of bad UI">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con1.png" alt="Screenshot of bad UI. The search bar is in the middle, but the events all line to the side of the screen leaving 3/4 of the screnn in white space">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con2.png" alt="Screenshot of bad UI. The image under the search bar overlapping onto the event block-card">
+                                        <img class="u-photo img-design img-group" src="../Images/Blogs/blog_week_7_ticketpro_con3.png" alt="Screenshot of bad UI. Showcasing how events are left to the side taking up a 1/4 of the screen only">
                                     </figure>
                                 </p>
 
                                 
                                 <h2 class="p-name">References:</h2>
                                 <p>
-                                    Joannb.com. (2017). Jo. [online] Available at: <a href="https://joannb.com/portfolio-dischem.html">https://joannb.com/portfolio-dischem.html</a>. [Accessed 31 Mar. 2025].
+                                    Joannb.com.(2017).Jo.[online]Available at:<a href="https://joannb.com/portfolio-dischem.html">https://joannb.com/portfolio-dischem.html</a>. [Accessed 31 Mar. 2025].
                                 </p>
                             </div>
                             <a href="#" class="to-top">To the Top</a>
