--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -112,15 +112,15 @@
                         <h3 class="p-name">Style process documentation</h3>
                         <figure>
                             <figcaption>First image in the web style guide</figcaption>
-                            <img class="u-photo web-style-guide img-design"  src="../Images/Designs/Week_5/1.png" alt="First image in the web style guide">
+                            <img class="u-photo web-style-guide img-design"  src="../Images/Designs/Week_5/1.png" alt="First image in the web style guide showcasing font ideas, logo variation, and moodboard inspirations">
                         </figure>
                         <figure>
                             <figcaption>Second image in the web style guide</figcaption>
-                            <img class="u-photo web-style-guide img-design" src="../Images/Designs/Week_5/2.png" alt="Second image in the web style guide">
+                            <img class="u-photo web-style-guide img-design" src="../Images/Designs/Week_5/2.png" alt="Second image in the web style guide showcasing colour palette, buttons and mockup wireframe of blogs page">
                         </figure>
                         <figure>
                             <figcaption>Third image in the web style guide</figcaption>
-                            <img class="u-photo web-style-guide img-design" src="../Images/Designs/Week_5/3.png" alt="Third image in the web style guide">
+                            <img class="u-photo web-style-guide img-design" src="../Images/Designs/Week_5/3.png" alt="Third image in the web style guide of mockup blogs with background colour variations and a colour contrast checker">
                         </figure>
                     </p>
 
@@ -128,7 +128,7 @@
                         <h3 class="p-name">Colour Choices</h3>
                         Regarding contrast between values of hex colour value #045782 (foreground) and #b5d4ed (background): <br>
                         The contrast ration is 5, and it it's a pass on normal text, large text and graphical objects and user interface components.
-                        <img class="u-photo img-design" src="../Images/Designs/Week_5/contrast checker.png" alt="contrast checker image screenshot" >
+                        <img class="u-photo img-design" src="../Images/Designs/Week_5/contrast checker.png" alt="contrast checker image screenshot contrasting colours #045782 (foreground) and #b5d4ed (background)" >
 
 
                     </p>
