--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -91,7 +91,7 @@
                             to navigate through. <br>
                             <figure>
                                 <figcaption>folder structure</figcaption>
-                                <img class="Folder img-design" src="../Images/Blogs/blog_week_2_FolderStructure001.png" alt="Folder structure">
+                                <img class="Folder img-design" src="../Images/Blogs/blog_week_2_FolderStructure001.png" alt="Folder structure showcasing all the sections of the website and their respective folder and subfolders.">
                             </figure>
                         </p>
 
@@ -102,7 +102,7 @@
                             presented. A page to hold all my blogs, and a page leading to each blog to showcase the blog posts in their entirety.
                             <figure>
                                 <figcaption>Low fedility wireframe</figcaption>
-                                <img class="wireframe img-design" src="../Images/Blogs/blog_week_2_WireframePrototype001.jpg" alt="Low fedility Wireframe">
+                                <img class="wireframe img-design" src="../Images/Blogs/blog_week_2_WireframePrototype001.jpg" alt="Low fedility Wireframe, very basic. Blockouts of the webpages, showcasing blog-cards, nav bar and blog pages">
                             </figure>
                         </p>
 
