--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -73,25 +73,25 @@
                             <p>
                             Box shadow effect inside the containers: rgba(0, 255, 255, 0.3)
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_1.png" alt="colour swatches">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_1.png" alt="colour swatch for box shadow effect rgba(0, 255, 255, 0.3)">
                             </figure>
                             </p>
                             <p>
                             Hover over text and normal text: aliceblue
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_2.png" alt="colour swatches">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_2.png" alt="colour swatches for hover over aliceblue">
                             </figure>
                             </p>
                             <p>
                             Container border: #00156a
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_3.png" alt="colour swatches">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_3.png" alt="colour swatches for the border #00156a">
                             </figure>
                             </p>
                             <p>
                             Background: linear-gradient(-45deg, #00001b, #0a0049, #00156a, #000d5d);
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="colour swatches">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_4.png" alt="colour swatches linear-gradient(-45deg, #00001b, #0a0049, #00156a, #000d5d);">
                             </figure>
                             <figure> 
                                 <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_5.png" alt="colour swatches">
@@ -106,13 +106,13 @@
                             <p>
                             Navigation: box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_8.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_8.png" alt="colour swatch Navigation: box-shadow: 0 0 15px #001dff, 0 0 30px #001dff inset;">
                             </figure>
                             </p>
                             <p>
                             border-top: 1px solid #00f6ff;
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_9.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/colour_9.png" alt=" border-top: 1px solid #00f6ff;">
                             </figure>
                             </p>
 
@@ -125,19 +125,19 @@
                         <p>
                             This is the font sample for the Headings:
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_h1.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_h1.png" alt="font sample image, font orbitron">
                             </figure>
                         </p>
                         <p>
                             Font sample for any text that need to be highlighted like logo
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_highlight.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_highlight.png" alt="font sample image, font audiowide">
                             </figure>
                         </p>
                         <p>
                             Font sample for normal paragraph text:
                             <figure> 
-                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_normal.png" alt="font sample image">
+                                <img class="u-photo img-design " src="../Images/Designs/Week_6/font_normal.png" alt="font sample image, font share tech mono">
                             </figure>
                         </p>    
 
@@ -146,14 +146,14 @@
                     <p>
                         Final design Sketches:
                         <figure> 
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches, blog main page with blog cards in a flex box">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4.png" alt="Wireframe final design sketches, Essays home page, with two essay blog cards">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5.png" alt="Wireframe final design sketches, Essay entry page with essay text centred">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6.png" alt="Wireframe final design sketches, Designs home page with blog cards of design sections">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7.png" alt="Wireframe final design sketches, design entry page">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8.png" alt="Wireframe final design sketches, profile page with avatar of me to the left of the screen and text with me to the right of the screen">
                         </figure>
                     </p>
 
@@ -181,11 +181,11 @@
                 <p>
                     <!--Wireframe images-->
                     <figure> 
-                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches">
-                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches">
-                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches">
-                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_4.png" alt="Wireframe final design sketches">
-                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches, brainstorming various layouts of homepage">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches, brainstorming essays page and essay entry">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches, brainstorming porfolio cards layout and profile layout">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_4.png" alt="Wireframe final design sketches, brainstorming designs layout and design entry layout">
+                        <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches, brainstorming blogs page and blog entry page">
                     </figure>
                 </p>
                 <a href="#" class="to-top">To the Top</a>
