--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -45,30 +45,30 @@
 
                     <p>
                         Initial: <br>
-                        <img class="wireframe img-design img-group" src="../Images/Blogs/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+                        <img class="wireframe img-design img-group" src="../Images/Blogs/blog_week_2_WireframePrototype001.jpg" alt="Low fedility Wireframe, very basic. Blockouts of the webpages, showcasing blog-cards, nav bar and blog pages">
                     </p>
                     <p>
                         Design interaction sketches:
                         <figure> 
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_4.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_1.png" alt="Wireframe final design sketches, brainstorming various layouts of homepage">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_2.png" alt="Wireframe final design sketches, brainstorming essays page and essay entry">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_3.png" alt="Wireframe final design sketches, brainstorming porfolio cards layout and profile layout">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_4.png" alt="Wireframe final design sketches, brainstorming designs layout and design entry layout">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe2_5.png" alt="Wireframe final design sketches, brainstorming blogs page and blog entry page">
                         </figure>
                     </p>
 
                     <p>
                         Final design Sketches:
                         <figure> 
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7.png" alt="Wireframe final design sketches">
-                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8.png" alt="Wireframe final design sketches">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_1.png" alt="Wireframe final design sketches, home page with avatar of me on left hand side, and ladning page text to the right of image">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_2.png" alt="Wireframe final design sketches , blog main page with blog cards in a flex box">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_3.png" alt="Wireframe final design sketches, blog page with blog entry. Blog text in the middle of the page">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_4.png" alt="Wireframe final design sketches, Essays home page, with two essay blog cards">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_5.png" alt="Wireframe final design sketches, Essay entry page with essay text centred">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_6.png" alt="Wireframe final design sketches, Designs home page with blog cards of design sections">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_7.png" alt="Wireframe final design sketches, design entry page">
+                            <img class="u-photo img-design img-group" src="../Images/Designs/Week_6/wireframe_8.png" alt="Wireframe final design sketches, profile page with avatar of me to the left of the screen and text with me to the right of the screen">
                         </figure>
                     </p>
 
