--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -37,7 +37,7 @@
             
 
         <main>
-            <div class="container">
+            <div class="group-container">
             <article class="h-entry">
                 <div class="e-content container-wrapper">
                 <h1 class="p-name">Research for Design Section</h1>
