Updated essay_1.html alt tag for images

--- a/Essays/essay_1.html
+++ b/Essays/essay_1.html
@@ -115,9 +115,51 @@
                     </p>
 
                     <p>
-                        <!--add extensive navigation image with fig caption extensive navigation-->
-                        <!--Mother's day theme-->
-                        <!--Basically all the images-->
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_1.png" alt="Dischem screenshot of an extensive menu category and navigation within the menu, also an advantage of the Dischem site">
+                            <figcaption>Extensive navigation (Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_2.png" alt="Screenshot of the Mother's day theme">
+                            <figcaption>Mother's Day theme (Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_3.png" alt="Inconsistent responsive design when the size of the screen is smaller than laptop, the menu ">
+                            <figcaption>Inconsistent responsive design (Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_4.png" alt="Inconsistent responsive design with Mother’s Day theme">
+                            <figcaption>Inconsistent responsive design part 2(Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_5.png" alt="Screenshot of bad UI. Large advert image of easter specials under each other leaving white space to the sides">
+                            <figcaption>Easter Special Homepage inconsistent compositional layout (Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_6.png" alt="Screenshot of bad UI. Advert images of easter specials with two next to each other and one below in the middle. Not very harmonious layout">
+                            <figcaption>Easter Special Homepage inconsistent compositional layout part 2(Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_7.png" alt="Screenshot of bad UI. Block-cards showcasing products and each product image is a different size. As a result the 'shop now' button is on different levels on each block-card. Not easy for user to navigate">
+                            <figcaption>Product block card inconsistent compositions (Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_8.png" alt="Screenshot of bad UI. Another case whereby the block-cards showcase products and each product images is different sizes. As a result the 'shop now' button is on different levels on each block-card. Not easy for user to navigate">
+                            <figcaption>Product block card inconsistent compositions part 2(Dischem, 2025)</figcaption>
+                        </figure>
+
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_9.png" alt="Screenshot of bad UI. Images overlapping, and text cut-off by those images">
+                            <figcaption>Image cutting off text and images layering on top of each other (Dischem, 2025)</figcaption>
+                        </figure>
+                        
                     </p>
 
                     <p>
@@ -143,7 +185,10 @@
                     </p>
 
                     <p>
-                        <!--image airship tracking-->
+                        <figure>
+                            <img class=" img-design" src="../Images/Essays/essay_1_dischem_10.png" alt="Screenshot of Dischem AirShip Tracking Website showing links to Dischem website, returns policy and tracking page">
+                            <figcaption>Dischem AirShip Tracking Website (Team, 2020)</figcaption>
+                        </figure>
                     </p>
 
                     <p>
