Update Essay section
Fixed image responsiveness
Add block-cards to the main essay page, and added styling

--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -37,12 +37,48 @@
         </header>
 
         <main>
-            <div class="section-wrapper container">
+            <!--<div class="section-wrapper container">
                 <h1 class="p-name">Essays</h1>
                 <article class="h-entry e-content">
                     <p>No essays yet. Stay tuned!</p>
                 </article>
+            </div>-->
+
+            <div class="h-feed Blog-Container">
+        <h1 class="p-name">Essays</h1>
+            <article class="h-entry e-content">
+
+            <div class="blog-card">
+            <h2 class="p-name">Essay 1: UX & UI Analysis</h2>
+                    <p class="p-summary">
+                        While interaction on the web is structured through the user interface (UI) and (UX), the ethics
+                        of the interaction design can be deliberated since the way users interact with websites is
+                        largely shaped by the principles of UI/UX design. These elements not only determine how
+                        information is presented...<br>
+                    Read more <a href="essay_1.html" class="view-more">Read More...</a> <br>
+                    </p>
             </div>
+            
+            <div class="blog-card">
+            <h2 class="p-name">Essay 2</h2>
+                    <p class="p-summary">
+                        Coming soon! Stay Tuned!
+                        Read more <a href="essay_2.html" class="view-more">Read More...</a> <br>
+                    </p>
+            </div>
+
+            </div>
+            </article>
+
+            <section>
+                <nav class="Sub-Nav">
+                    <ul>
+                    <li><a class="active">Essays</a></li>
+                    <li><a href="essay_1.html">1</a></li>
+                    <li><a href="essay_2.html">2</a></li>
+                    </ul>
+                </nav>
+            </section>
         </main>
         
         <footer>
