Fixed the reference list styling in essay_1.html

--- a/Essays/essay_1.html
+++ b/Essays/essay_1.html
@@ -218,8 +218,10 @@
                 <h2>Essay Case Study Link and Images:</h2>
                     <p>
                         <ul>
-                        <li>Dis-Chem. (2025). Dis-Chem. [online] Available at: <a class="u-url" href="https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB"> https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB </a> [Accessed 21 Apr. 2025].</li>
-                        <li>Images: Screenshots from Dis-Chem. (2025). Dis-Chem. [online] Available at: <a class="u-url" href="https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB"> https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB </a>[Accessed 21 Apr. 2025]. </li>
+                        <li>Dis-Chem. (2025). Dis-Chem. [online] Available at: <a class="u-url" href="https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB">
+                            https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB </a> [Accessed 21 Apr. 2025].</li> <!--I have no idea why this reference link doesn't wrap like the ones below-->
+                        <li>Images: Screenshots from Dis-Chem. (2025). Dis-Chem. [online] Available at: <a class="u-url" href="https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB">
+                            https://www.dischem.co.za/?gad_source=1&gbraid=0AAAAAo1J0TwkiTG4-hz-me4c2E_wzeF7v&gclid=Cj0KCQjw2ZfABhDBARIsAHFTxGyJmxgqAXrb90rVfwhoSczD69bX9R_nVzlu_ifaMWvJQBFJPLT3bWcaArvdEALw_wcB </a>[Accessed 21 Apr. 2025]. </li>
                         </ul>
                     </p>
 
