--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -43,7 +43,7 @@
                 <article class="h-entry e-content">
 
                     <div class="blog-card">
-                    <h2 class="p-name">Designs Week 5</h2>
+                    <h2 class="p-name">Style Guide</h2>
                         <p>
                             Research for my Design Section of the website, including but not limited to the documentation of my IxD process, style process documentation, 
                                 and style guide mapping.
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="blog-card">
-                    <h2 class="p-name">Designs Week 6</h2>
+                    <h2 class="p-name">Style Guide (part 2)</h2>
                         <p>
                             Adding more to the Design Section of the website such as the style guide and wireframe
                             
