--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -51,6 +51,8 @@
                             <p>
                                 Mahala & Autumn is a 3D narrative game where the player is a lost cat and has to find it's way back ot it's owner.
                                 The environment is littered with clues on which way to get home, and how you got lost!
+                                A team effort done by Meghan Rogers, Arya Pillay, and myself! Arya being the lead artist, Meghan being the UI/UX designer and level designer
+                                and myself as the lead programmer (as well as shader graph artist). 
                             </p>
                           </section>
 
@@ -69,6 +71,7 @@
                             <h2>Escaping Cronus</h2>
                             <p>
                                 Escaping Cronus is a 2D top down two-player tile game. Players have limited moves each time, with a time ticking to get to the centre first!
+                                A team effort between Aiden Africa, Jaiden Muruvan, Unathi Mbatha and myself! Unathi being our artist and the rest of us as programmers!
                             </p>
                           </section>
 
@@ -86,7 +89,7 @@
                           <section class="game-description">
                             <h2>Inventory System</h2>
                             <p>
-                                This is an inventory system where I learned how to manage data and information!
+                                This is a solo inventory system project where I learn how to manage data and information in Unity!
                             </p>
                           </section>
 
@@ -104,7 +107,7 @@
                           <section class="game-description">
                             <h2>Air Hockey</h2>
                             <p>
-                                A 2D top down view of air hockey, played against an enemy AI!
+                                A 2D top down view of air hockey, played against an enemy AI! A solo project where I learn Unity's 2D physics system
                             </p>
                           </section>
 
