--- a/Essays/essay_1.html
+++ b/Essays/essay_1.html
@@ -28,7 +28,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../Blogs/blog.html">Blogs</a> </li>
                 <li><a href="../Designs/designs.html">Designs</a></li>
-                <li><a class="active">Essays</a> </li>
+                <li><a href="essay.html" class="active">Essays</a> </li>
                 <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
                 <li><a href="../Profile/profile.html">Profile</a></li>
                 </ul>
