--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -60,7 +60,7 @@
                 <h3>Reflection on the readings selected - relating it to your experience with the internet today</h3>
                     <p>
                         <!--Added the cite tag-->
-                        In <cite>"As We May Think"</cite>, Vannevar Bush mentions several ways of technology that have become common to the modern-day man. 
+                        In <cite>"As We May Think"</cite>, <cite>Vannevar Bush</cite> mentions several ways of technology that have become common to the modern-day man. 
                         He mentions how there is vast information in the world, 
                         yet technology may be able to compress that information into the size of a quarter of a table. 
                         We see this instance on computers storing information, hard drives that hold an entire library on it. 
@@ -68,7 +68,7 @@
                     </p>
                     
                     <p>
-                        An interesting electromechanical device that Bush hypothesized about is <q>memex</q> (Bush, 1945, p. 42). 
+                        An interesting electromechanical device that Bush hypothesized about is <q>memex</q> <cite>(Bush, 1945, p. 42)</cite>. 
                         This would store and automatically cross-reference all the user's books, records, and other information. 
                         This can be seen in that a person can cross-reference almost about anything with information on the internet. 
                         This device would come to mirror how we think. I found Bush's reading quite interesting because the internet 
