--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -48,39 +48,39 @@
 
                     <h3 class="p-summary">Reflecting on"<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" (2003) by Moulthrop and how it speak to the internet today </h3>
                         <p> 
-                            "<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" was an essay by Stuart Moulthrop originally published in 1991
-                            and then later included in the new Media Reader in 2003. Moulthrop's essay explores the concept of hypertext and it's potential
-                            to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. Moulthrop explores this concept through
+                            "<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" was an essay by <cite>Stuart Moulthrop</cite> originally published in 1991
+                            and then later included in the new Media Reader in 2003. <icte>Moulthrop's</icte> essay explores the concept of hypertext and it's potential
+                            to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. <cite>Moulthrop</cite> explores this concept through
                             the lens of Theodor Holm Nelson's vision of a universal hypertext system called Xanadu. 
-                            However, I'd like to talk about the concept of "Hyperreality" that Moulthrop touches on.  
+                            However, I'd like to talk about the concept of <q>Hyperreality</q> that <cite>Moulthrop</cite> touches on.  
                         </p>
 
                         <p> 
-                            Moulthrop discusses how hypertext challenges traditional notions of reality by creating a space where the distinction between 
+                            <cite>Moulthrop discusses how hypertext challenges traditional notions of reality by creating a space where the distinction between 
                             the real and the imaginary blurs. This aligns with the Internet's ability to blend reality and virtual experiences through various digital platforms, 
                             such as social media (but honestly, is anything even real at this point?). Social media platforms create a hyperreal environment where users/content creators/
                             any IG users present a handpicked and curated version of themselves, where viewers may not be able to distinguish reality, the idea if that's even you, you know 
-                            what I mean? This builds off on Moulthrop's idea that "referential or “grounded” utterance becomes indistinguishable from the self-referential" (Moulthrop, 1991, p. 694). 
+                            what I mean? This builds off on Moulthrop's idea that "referential or “grounded” utterance becomes indistinguishable from the self-referential" <cite>(Moulthrop, 1991, p. 694)</cite>. 
                             These curated online identities become indistinguishable from their real ones; can you tell if your favourite YouTuber is actually that funny in real life or are they 
                             just reading a script?
                         </p>
 
                         <p>
                             Now this is particularly interesting because you can connect this concept of how users curate this online version of 
-                            themselves to Jean Baudrillard's concept of simulacra, where simulation replaces genuine experiences (Vieira, 2023). 
+                            themselves to Jean Baudrillard's concept of simulacra, where simulation replaces genuine experiences <cite>(Vieira, 2023)</cite>. 
                             This can be seen in social media, where external validation overshadows genuine connections.
                         </p>
 
                         <p>
                             Additionally, this can be taken another step further since AI-generated content can be seen on social media, 
-                            and the lines between truth and falsehood are blurred (Vieira, 2023). This then challenges views of social media 
+                            and the lines between truth and falsehood are blurred <cite>(Vieira, 2023)</cite>. This then challenges views of social media 
                             content to differentiate genuine experiences and AI-generated content.
                         </p>
 
                         <p>
                             However, in Moulthrop's conclusion, he remains somewhat skeptical: 
-                            " <i>Well, you know . . . We all want to change your head. </i>
-                            The question remains: <b>which heads do the changing, and which get the change?</b>"
+                            <q><i>Well, you know . . . We all want to change your head. </i>
+                            The question remains: <b>which heads do the changing, and which get the change?</b></q>
                         </p>
 
                     <h2 class="p-name">Additional Stuff:</h2>
