--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -48,7 +48,7 @@
                     </p>
 
 
-                    <p class="p-summary">Working through the slides for Interaction Design (Geyser, 2023) for the web, define and discuss 
+                    <p class="p-summary">Working through the slides for Interaction Design <cite>(Geyser, 2023)</cite> for the web, define and discuss 
                         your user alignment, and map out your site's content, experience, and interface elements.</p>
 
             <div class="e-content">           
@@ -56,13 +56,13 @@
                     <p>
                         The main goal of the website is to function as a portfolio that highlights my 
                         creativity and accomplishments so far. In addition, the website should be a stepping 
-                        stone in helping me discover my unique style and branding (Fungies, 2023). 
+                        stone in helping me discover my unique style and branding <cite>(Fungies, 2023)</cite>. 
                         The main goal for users is to interact with my work. <br>
                         <b>The User:</b> There are two types of users. 
                         The lived-project user, such as my lecturers and tutors that mark my projects, 
                         and the imaginary user that comes to visit the portfolio. 
                         Visitors such as collaborators and any professionals. 
-                        The users should be able to see displayed work on the portfolio and be able to contact me. (Moritz Prätorius, 2024)
+                        The users should be able to see displayed work on the portfolio and be able to contact me. <cite>(Moritz Prätorius, 2024)</cite>
                     </p>
 
                 <h3 class="p-name">SITE CONTENT</h3>
@@ -75,7 +75,7 @@
                             Essays
                             Resume and profile (A downloadable resume and an about me section)
                             Contact information (contact info and links to professional profiles such as GitHub) <br>
-                        (Alvaro Trigo\'s Blog, 2022)    
+                        <cite>(Alvaro Trigo\'s Blog, 2022)</cite>    
                     </p>
                     <p>
                     <figure>
@@ -137,11 +137,11 @@
 
                 <h3 class="p-name"> Reflecting on how the exercise above relates to what I know about structure and URL scheme and how it relates to semantic markup.</h3>
                     <p>
-                        After doing some research, I discovered that a well-organized structure enhances both user experience and search engine optimization (Romano, 2022). 
+                        After doing some research, I discovered that a well-organized structure enhances both user experience and search engine optimization <cite>(Romano, 2022)</cite>. 
                         The exercise sort of emphasizes the importance of planning website structure early in the design process. 
                         So by mapping out my content hierarchically, I sort of ensure that users navigate seamlessly (at least that's the aim).
-                        Now the semantic markup defines how my content is presented and interpreted by browsers and assistive tech. (Progress, 2022)
-                        The next step would be to start thinking about design choices, which would include "colour scheme, typography, spacing, icons, imagery.". (Elementor, 2020)
+                        Now the semantic markup defines how my content is presented and interpreted by browsers and assistive tech. <cite>(Progress, 2022)</cite>
+                        The next step would be to start thinking about design choices, which would include "colour scheme, typography, spacing, icons, imagery.". <cite>(Elementor, 2020)</cite>
                     </p>
 
                 <h3 class="p-name">Reflecting on my development progress for the week.</h3>
@@ -150,7 +150,7 @@
                         have created the basic web structure, such as creating pages for each section and posting my blogs for the week. 
                         I have added some images into my design page as well, this being the low-fidelity wireframe. 
                         For the next step, I'd like to start incorporating design choices that would appeal to my 
-                        target audience, or "buyer personas" (Team, 2024).
+                        target audience, or "buyer personas" <cite>(Team, 2024)</cite>.
                     </p>
 
                 <h3 class="p-name">References</h3>
