--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -58,7 +58,7 @@
                                     The UI/UX has several ways of enhancing the online shopping experience for the user.
                                     The information structure is well organized. 
                                     The menu categorizes products and services into clear sections, such as Beauty, Health and Wellness, etc. 
-                                    This sort of organization simplifies the browsing experience for the user, allowing them to intuitively navigate items quickly. (Joannb.com, 2017)
+                                    This sort of organization simplifies the browsing experience for the user, allowing them to intuitively navigate items quickly. <cite>(Joannb.com, 2017)</cite>
                                     The user has the ability to create a account, where they can also earn from their Dis-chem Benefit Rewards, 
                                     save address details and payment information for a smoother checkout. With this, they are able to track their order history and current status. 
                                     This definitley tailors the experience to allow for a personalized shopping experience for the users.
