Game Analysis Folder Rename
Added metadata to the heading of the game_analysis image

--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -126,7 +126,7 @@
                     <div class="game-container">
 
                         <figure class="game-img left">
-                            <img src="../Images/Portfolio/Game Analysis/coffee_talk_3.png" class="responsive-img" alt="Screenshot of gameplay of Coffee Talk showing the player serving the coffee">
+                            <img src="../Images/Portfolio/Game_Analysis/coffee_talk_3.png" class="responsive-img" alt="Screenshot of gameplay of Coffee Talk showing the player serving the coffee">
                           </figure>
                         
                           <section class="game-description">
