--- a/Portfolio/game_analysis_1.html
+++ b/Portfolio/game_analysis_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Talk</title>
     <meta name="author" content="Amina Moosa">
-    <meta name="description" content="Essays for the module">
+    <meta name="description" content="Game Analysis for Coffee Talk, the game">
     <link rel="stylesheet" href="essay.css">
 
     <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
@@ -67,7 +67,7 @@
                         player says I want something that is “sweet and warm”).
 
                         <figure>
-                            <img class=" img-design" src="../Images/Portfolio/Game Analysis/coffee_talk_1.png" alt="Screenshot of gameplay showing the brew mechanic and the character asking for a triple shot expresso">
+                            <img class=" img-design" src="../Images/Portfolio/Game_Analysis/coffee_talk_1.png" alt="Screenshot of gameplay showing the brew mechanic and the character asking for a triple shot expresso">
                             <figcaption>Screenshot from Coffee Talk(2020) from Toge Productions</figcaption>
                         </figure> 
                     </p>
@@ -81,7 +81,7 @@
                         just some automated art. This is an optional creative feature that adds play to the atmosphere.
 
                         <figure>
-                            <img class=" img-design" src="../Images/Portfolio/Game Analysis/coffee_talk_2.png" alt="Screenshot of gameplay showing the latte art mechanic. Top down biew of the coffee and UI showing features like 'pour milk', 'reset', 'serve it'.">
+                            <img class=" img-design" src="../Images/Portfolio/Game_Analysis/coffee_talk_2.png" alt="Screenshot of gameplay showing the latte art mechanic. Top down biew of the coffee and UI showing features like 'pour milk', 'reset', 'serve it'.">
                             <figcaption>Screenshot from Coffee Talk(2020) from Toge Productions</figcaption>
                         </figure>
 
@@ -111,7 +111,7 @@
                         storytelling, making it more than just a visual novel or a simulation game.
 
                         <figure>
-                            <img class=" img-design" src="../Images/Portfolio/Game Analysis/coffee_talk_3.png" alt="Screenshot of gameplay showing the player serving the coffee">
+                            <img class=" img-design" src="../Images/Portfolio/Game_Analysis/coffee_talk_3.png" alt="Screenshot of gameplay showing the player serving the coffee">
                             <figcaption>Screenshot from Coffee Talk(2020) from Toge Productions</figcaption>
                         </figure>
                     </p>
