Edited description of page (MetaData)

--- a/Blogs/blog_week_10.html
+++ b/Blogs/blog_week_10.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog Week 10</title>
         <meta name="author" content="Amina Moosa">
-        <meta name="description" content="Blog week 7 looking at some examples for Essay 1: UX & UI Analysis">
+        <meta name="description" content="Blog week 10 looking at the reading Greenstein et al. - 2018 - How Geography Shapes-and Is Shaped by-the Internet">
         <link rel="stylesheet" href="blog.css">
 
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
