--- a/Essays/essay_1.html
+++ b/Essays/essay_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essay UI UX</title>
     <meta name="author" content="Amina Moosa">
-    <meta name="description" content="Essays for the module">
+    <meta name="description" content="Essay 1: UX/UI Analysis on the South African Website Dischem">
     <link rel="stylesheet" href="essay.css">
 
     <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
