--- a/Blogs/blog_week_11.html
+++ b/Blogs/blog_week_11.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog Week 11</title>
         <meta name="author" content="Amina Moosa">
-        <meta name="description" content="Blog week 7 looking at some examples for Essay 1: UX & UI Analysis">
+        <meta name="description" content="Blog week 11 looking at Christoph Lutz, Digital Inequalities in the Age of Artificial Intelligence and Big Data (2019)">
         <link rel="stylesheet" href="blog.css">
 
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
