--- a/Blogs/blog_week_12.html
+++ b/Blogs/blog_week_12.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog Week 12</title>
         <meta name="author" content="Amina Moosa">
-        <meta name="description" content="Blog week 7 looking at some examples for Essay 1: UX & UI Analysis">
+        <meta name="description" content="Blog week 7 looking at Digital Coloniality, specifically how code matters in the context of decolonialism and just things one should be aware of in coding practices">
         <link rel="stylesheet" href="blog.css">
 
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
