--- a/Blogs/blog_week_13.html
+++ b/Blogs/blog_week_13.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog Week 13</title>
         <meta name="author" content="Amina Moosa">
-        <meta name="description" content="Blog week 7 looking at some examples for Essay 1: UX & UI Analysis">
+        <meta name="description" content="Blog week 13 looking at ethical internet, more specifically Orgad - The internet as a moral space the legacy of Roger Silverstone - 2007">
         <link rel="stylesheet" href="blog.css">
 
         <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
