--- a/Essays/essay_2.html
+++ b/Essays/essay_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essays</title>
     <meta name="author" content="Amina Moosa">
-    <meta name="description" content="Essays for the module">
+    <meta name="description" content="Essay 2 coming soon">
     <link rel="stylesheet" href="../Styles/main.css"/>
     <link rel="stylesheet" href="essay.css">
 
