--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -46,7 +46,7 @@
                     <p class="p-summary">The process was relatively smooth, save for some hiccups. <br>
                     The first time I tried setting up my page and publishing it to GitHub, I then opened the link, only to find "Error 404.". 
                     Was I confused? Absolutely... <br>
-                    Read more <a href="blog_week_1.html" class="view-more">Read More...</a> <br>
+                    <a href="blog_week_1.html" class="view-more">Read More...</a> <br>
                     </p>
             </div>
             
@@ -57,7 +57,7 @@
                         in the new Media Reader in 2003. <br>
                         Moulthrop's essay explores the concept of hypertext and it's potential to revolutionize 
                         media and culture, which is DEFINITELY relevant to the Internet today. <br>
-                        Read more <a href="blog_week_2.html" class="view-more">Read More...</a> <br>
+                        <a href="blog_week_2.html" class="view-more">Read More...</a> <br>
                     </p>
             </div>
              
@@ -66,7 +66,7 @@
                 <p class="p-summary">
                     Working through the slides for Interaction Design <cite>(Geyser, 2023)</cite> for the web, define and discuss 
                      user alignment, and map out your site's content, experience, and interface elements.<br>
-                    Read more <a href="blog_week_3.html" class="view-more">Read More...</a>
+                    <a href="blog_week_3.html" class="view-more">Read More...</a>
 
                 </p>
             </div>
@@ -78,7 +78,7 @@
                     The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
                     This is translated through the main colour palette and the fonts <cite>(Elementor, 2020)</cite>.
                     There are ideas and variations for some aspects in the style-guide...
-                    Read more <a href="blog_week_4.html" class="view-more">Read More...</a>
+                    <a href="blog_week_4.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
@@ -103,7 +103,7 @@
             <h2 class="p-name">Responsive Design</h2>
                 <p class="p-summary">
                     Websites to consider for the upcoming Essay: UX & UI Analysis.<br>
-                    Read more <a href="blog_week_7.html" class="view-more">Read More...</a>
+                    <a href="blog_week_7.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
@@ -115,7 +115,7 @@
                     Claire Daniolou’s <cite>"The Need for Global Internet Connectivity”</cite> and Spyros Kasapis’ 
                     <cite>“Internet Access is a Fundamental Right”</cite>
                     through the lens of Design Justice...<br>
-                    Read more <a href="blog_week_9.html" class="view-more">Read More...</a>
+                    <a href="blog_week_9.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
@@ -125,7 +125,7 @@
                     In the reading, <cite>Greenstein et al.’s</cite> core argument challenges the <q>Death of Distance</q> idea 
                     that the internet erases the importance of physical location, thus arguing that geography 
                     still significantly shapes how the Internet is built, accessed...<br>
-                    Read more <a href="blog_week_10.html" class="view-more">Read More...</a>
+                    <a href="blog_week_10.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
@@ -136,7 +136,7 @@
                     he closely looks at how unfairness in the digital world still exists to this day, especially with 
                     new tech like AI (smart machines), big data, etc. He informs us about digital inequality in light of 
                     new technology such as this...<br>
-                    Read more <a href="blog_week_11.html" class="view-more">Read More...</a>
+                    <a href="blog_week_11.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
@@ -147,7 +147,7 @@
                     How code matters in the context of decolonialism and just things one should be aware of in coding 
                     practices such as programming languages that are mostly shaped by the ideas and values of the West. 
                     This might result in an ignore of other cultures' ways of thinking, learning, and solving...<br>
-                    Read more <a href="blog_week_12.html" class="view-more">Read More...</a>
+                    <a href="blog_week_12.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
@@ -158,7 +158,7 @@
                     Ethical Internet. An ethical internet means using the internet in a way that is fair, respectful, 
                     and responsible. It’s about making sure that people, companies, and governments behave in ways 
                     that protect everyone’s rights and treat...<br>
-                    Read more <a href="blog_week_13.html" class="view-more">Read More...</a>
+                    <a href="blog_week_13.html" class="view-more">Read More...</a>
                 </p>
             </div>
 
