Fixed Repeat styling in essay.css
Fixed footer to middle too, for essay section

--- a/Essays/essay_2.html
+++ b/Essays/essay_2.html
@@ -60,7 +60,7 @@
                 </a>
             </p>
 
-            <p>Brought to you by Amina Moosa</p>
+            <p class="footer">Brought to you by Amina Moosa</p>
         </footer>
     </body>
 </html>
