--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -89,7 +89,7 @@
                 </a>
             </p>
 
-            <p>Brought to you by Amina Moosa</p>
+            <p class="footer">Brought to you by Amina Moosa</p>
         </footer>
     </body>
 </html>
