Essay Section buttons done

--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -73,6 +73,11 @@
                 </nav>
             </section>
         </main>
+
+        <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
+        <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
+        <script src="../Scripts/main.js"></script>
+        <script src="essay.js"></script>
         
         <footer>
             <p class="footer">
