--- a/Essays/essay_2.html
+++ b/Essays/essay_2.html
@@ -45,6 +45,15 @@
             </div>
         </main>
         
+            <!--<button id="toTopBtn" title="Go to top">↑ Top</button>-->
+        <button id="toTopBtn" title="Back to Top"><i class="fa-solid fa-arrow-up"></i></button>
+            <div class="blog-nav">
+                <button id="prevBtn">←</button>
+                <button id="nextBtn">→</button>
+            </div>
+        <script src="../Scripts/main.js"></script>
+        <script src="essay.js"></script>
+
         <footer>
             <p class="footer">
                 <a href="mailto:2750697@students.wits.ac.za">
